docs/errors/examples/decorator-not-permitted-here/decorator-not-permitted-here.expected.txt
error[E4002]: decorator not permitted here
  --> decorator-not-permitted-here.grob:4:5
   |
 4 |     @secure
   |     ^^^^^^^
   |
   = note: `@secure` is only permitted on `param` declarations
   = help: move the binding into a `param` block at the top of the script if it is a script parameter
